<resources>
    <!--app-->
    <string name="app_name">IceRockTestGitApp</string>
    <!--buttons-->
    <string name="b_sign_in">Sign In</string>
    <string name="b_refresh">refresh</string>
    <string name="b_retry">retry</string>
    <!--titles-->
    <string name="title_empty_error">Empty</string>
    <string name="title_something_error">Something error</string>
    <string name="title_connection_error">Connection error</string>
    <string name="title_repos_license">License</string>
    <!--content_descriptions-->
    <string name="cd_license">License</string>
    <string name="cd_forks">Forks</string>
    <string name="cd_watchers">Watchers</string>
    <string name="cd_star">Star</string>
    <string name="cd_error">Error</string>
    <string name="cd_logo">Logo</string>
    <!--text-->
    <string name="hint_auth">Personal access token</string>
    <string name="empty_error">No repositories at the moment</string>
    <string name="something_error">Check your something</string>
    <string name="connection_error">Check your Internet connection</string>
    <string name="repos_stars" ><![CDATA[<font color="#FAD876"><span>%1$d</span></font><font color="#FFFFFF"><span>  stars</span></font>]]></string>
    <string name="repos_forks"><![CDATA[<font color="#6ED370"><span>%1$d</span></font><font color="#FFFFFF"><span>  forks</span></font>]]></string>
    <string name="repos_watchers"><![CDATA[<font color="#9CFFF9"><span>%1$d</span></font><font color="#FFFFFF"><span>  watchers</span></font>]]></string>
    <string name="no_readme">No README.md</string>
    <string name="open_error">Could not open the link</string>
    <!--alert_dialog-->
    <string name="title">Error</string>
    <string name="pos_b">OK</string>
    <!--headers-->
    <string name="repo_list_header">Repositories</string>
</resources>