<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="15dp"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/cd_error"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_error"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/red_error_light"
            android:text="@string/title_something_error"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="@string/something_error"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bUpdateListSomethingError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/b_refresh"
        style="@style/green_button"/>
</FrameLayout>