<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RepositoryFragmentView"
    android:background="@color/gray_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            style="@style/text_button"
            app:icon="@drawable/ic_link"
            android:paddingHorizontal="15dp"
            app:rippleColor="@color/blue_ripple"
            app:cornerRadius="0dp"
            app:iconTint="@color/blue_sec"
            android:textAlignment="viewStart"
            android:text="sdfmglkdjslf;kgsd;fkgs;ldfkg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="15dp">

            <ImageView
                android:id="@+id/ivLicenseIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_license"
                android:src="@drawable/ic_license"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tvLicenseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repos_license"
                android:textSize="16sp"
                android:layout_toEndOf="@+id/ivLicenseIcon"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/tvLicenseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/tvLicenseTitle"
                android:textAlignment="textEnd"
                android:text="Apache 2.0"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexWrap="wrap"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="15dp"
            app:alignItems="center"
            android:layout_gravity="center"
            app:alignContent="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cd_star"
                    android:src="@drawable/ic_star"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/tvReposStars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textSize="16sp"
                    android:textColor="@color/yellow_star"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:text="@string/repos_stars"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cd_forks"
                    android:src="@drawable/ic_fork"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/tvReposForks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textSize="16sp"
                    android:textColor="@color/green_forks"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:text="@string/repos_forks"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cd_watchers"
                    android:src="@drawable/ic_watch"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/tvReposWatchers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textSize="16sp"
                    android:textColor="@color/blue_eye"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:text="@string/repos_watchers"/>
            </LinearLayout>
        </com.google.android.flexbox.FlexboxLayout>
    </LinearLayout>
</ScrollView>