<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@color/transparent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glConTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/gl_start"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glConBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/gl_end"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glConStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/gl_start"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glConEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/gl_end"/>

    <ImageView
        android:id="@+id/ivConnectionError"
        android:layout_width="@dimen/size_error_image"
        android:layout_height="@dimen/size_error_image"
        android:contentDescription="@string/cd_error"
        android:src="@drawable/ic_connection_error"
        app:layout_constraintBottom_toTopOf="@id/glConBottom"
        app:layout_constraintEnd_toStartOf="@id/glConEnd"
        app:layout_constraintStart_toEndOf="@id/glConStart"
        app:layout_constraintTop_toBottomOf="@id/glConTop"
        app:layout_constraintVertical_bias="@dimen/bias_error_image" />

    <TextView
        android:id="@+id/tvConnectionErrorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_connection_error"
        android:textColor="@color/red_error_light"
        android:textSize="@dimen/font_default_size"
        app:layout_constraintBottom_toTopOf="@id/glConBottom"
        app:layout_constraintEnd_toStartOf="@id/glConEnd"
        app:layout_constraintStart_toEndOf="@id/glConStart"
        app:layout_constraintTop_toBottomOf="@+id/ivConnectionError"
        app:layout_constraintVertical_bias="@dimen/bias_error_name" />

    <TextView
        android:id="@+id/tvConnectionErrorDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_medium_size"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/connection_error"
        app:layout_constraintBottom_toTopOf="@id/glConBottom"
        app:layout_constraintEnd_toStartOf="@id/glConEnd"
        app:layout_constraintStart_toEndOf="@id/glConStart"
        app:layout_constraintTop_toBottomOf="@+id/tvConnectionErrorName"
        app:layout_constraintVertical_bias="@dimen/bias_error_description"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bUpdateListConnectionError"
        android:layout_width="@dimen/null_size"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/b_retry"
        style="@style/green_button"
        app:layout_constraintVertical_bias="@dimen/bias_end"
        app:layout_constraintBottom_toTopOf="@id/glConBottom"
        app:layout_constraintEnd_toStartOf="@id/glConEnd"
        app:layout_constraintStart_toEndOf="@id/glConStart"
        app:layout_constraintTop_toBottomOf="@id/tvConnectionErrorDescription"/>
</androidx.constraintlayout.widget.ConstraintLayout>