<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark"
    tools:context=".presentation.auth.AuthFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glAuthStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/gl_start"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glAuthEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/gl_end"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glAuthBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/gl_end"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glAuthTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/gl_logo"/>

    <ImageView
        android:id="@+id/ivAuthLogo"
        android:layout_width="@dimen/size_logo"
        android:layout_height="@dimen/size_logo"
        android:contentDescription="@string/cd_logo"
        android:src="@drawable/ic_main_logo"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/glAuthTop"
        app:layout_constraintStart_toEndOf="@id/glAuthStart"
        app:layout_constraintEnd_toStartOf="@id/glAuthEnd"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUserToken"
        android:layout_width="@dimen/null_size"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginTop="40dp"
        style="@style/text_layout"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@id/glAuthStart"
        app:layout_constraintEnd_toStartOf="@id/glAuthEnd"
        app:layout_constraintTop_toBottomOf="@id/ivAuthLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_auth"
            android:inputType="text"
            style="@style/text_field"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bSignIn"
        android:layout_width="@dimen/null_size"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/pb_size"
        style="@style/green_button"
        android:text="@string/b_sign_in"
        app:layout_constraintStart_toEndOf="@id/glAuthStart"
        app:layout_constraintEnd_toStartOf="@id/glAuthEnd"
        app:layout_constraintBottom_toBottomOf="@id/glAuthBottom"/>

    <ProgressBar
        android:id="@+id/pbAuth"
        android:layout_width="@dimen/null_size"
        android:layout_height="@dimen/null_size"
        style="@style/pb"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="@id/bSignIn"
        app:layout_constraintStart_toStartOf="@id/bSignIn"
        app:layout_constraintBottom_toBottomOf="@id/bSignIn"
        app:layout_constraintTop_toTopOf="@id/bSignIn"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>